Bug 44657 - RTL UI: Horizontal scrollbar in calc main window is broken
Summary: RTL UI: Horizontal scrollbar in calc main window is broken
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Localization (show other bugs)
Version:
(earliest affected)
3.5.0 Beta2
Hardware: Other All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:3.7.0 target:3.6.4
Keywords:
: 44630 (view as bug list)
Depends on:
Blocks: RTL-CTL mab3.5
  Show dependency treegraph
 
Reported: 2012-01-10 16:08 UTC by Yotam Benshalom
Modified: 2013-04-08 09:21 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Note that the horizontal scrollbar at the bottom lacks a handle. (76.38 KB, image/png)
2012-01-11 04:02 UTC, Yotam Benshalom
Details
no scroller in Calc in RTL UI (63.97 KB, image/png)
2012-01-11 04:38 UTC, Lior Kaplan
Details
Screenshot WIN (2.25 MB, image/png)
2012-01-11 04:45 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yotam Benshalom 2012-01-10 16:08:05 UTC
Horizontal scrollbar in calc main window is broken in RTL interface. No
scroll handle is available, and the left and write arrows function incorrectly.

Current behavior:
1. The horizontal scrollbar shows no "handle" to drag.
2. Clicking on the arrows to the side of the horizontal scrollbar works, but
inversely. The right arrow scrolls to the left, the left arrow scrolls to the
right.

Expected behavior:
1. The horizontal scrollbar at the bottom of calc main window should show a
handle when it is needed.
2. Clicking on the right arrow should scroll to the right, clicking on the left
arrow should scroll to the left.
Comment 1 Yotam Benshalom 2012-01-10 16:09:55 UTC
*** Bug 44630 has been marked as a duplicate of this bug. ***
Comment 2 Rainer Bielefeld Retired 2012-01-10 22:06:32 UTC
A quick test with Parallel Dev-Installation of  "LibreOffice 3.5.0 Beta2 - WIN7 Home Premium (64bit) Arabic UI [Build-ID : 8589e48-760cc4d-f39cf3d-1b2857e-60db978] did not show the problem.

@reporter
Please attach a test kit and information what will enable users normally not using RTL UI to reproduce the problem.
Comment 3 Yotam Benshalom 2012-01-11 02:47:32 UTC
This problem is available only with RTL UI. As per all issues of the component "Localisation", you really HAVE to download a local LibreOffice version in order to reproduce it. For RTL problems use Arabic, Hebrew or Farsi version (I think Urdu too).

Here is Libreoffice download page: http://www.libreoffice.org/download/pre-releases/
Comment 4 Yotam Benshalom 2012-01-11 04:02:11 UTC
Created attachment 55417 [details]
Note that the horizontal scrollbar at the bottom lacks a handle.
Comment 5 Yotam Benshalom 2012-01-11 04:03:36 UTC
Steps to reproduce:
1. Just start calc normally. No sample document is needed.
That's it: you notice the lack of horizontal scroll handle right away.

My OS: ubuntu 11.10, using Hebrew UI.

Attached is a screenshot showing the lack of horizontal scroll handle. Note that the screenshot cannot show the additional problem: that the arrows are reversed (clicking one of them scrolls the calc document in the opposite direction).

If you have more specific questions, ask away and I'll do my best to answer (it is difficult for a user to answer a question like "how to start LibO in a specific locale without installing it"...)
Comment 6 Lior Kaplan 2012-01-11 04:38:21 UTC
Created attachment 55422 [details]
no scroller in Calc in RTL UI
Comment 7 Lior Kaplan 2012-01-11 04:39:46 UTC
Verified with 3.5.0 beta2. Changing status to new.

Why to reproduce:
1. Open LibO with RTL interface (either through settings or by setting the locale to an RTL language, e.g. export LC_ALL=he_IL.UTF-8).
2. Go to the last visible column (on my screen resolution that's column O), put some data on the next column and return to column A.
3. You'll notice there's no scroller in the scrollbar, only the arrow (screensot attached).

This happens with both LTR and RTL sheets.
Comment 8 Rainer Bielefeld Retired 2012-01-11 04:45:30 UTC
Created attachment 55423 [details]
Screenshot WIN

more or less [Reproducible] with Parallel Dev-Installation of  "LibreOffice 3.5.0 Beta2- WIN7 Home Premium (64bit) Hebrew UI and locale setting [Build-ID : 8589e48-760cc4d-f39cf3d-1b2857e-60db978]?

I can not confirm the "Missing scroll slider" problem, but IMHO the horizontal scroll arrow buttons are interchanged. The right one works direction column "A" and the left one to  direction column "AMJ", what might be correct. But the arrow icons are to the wrong direction. 

This wrong icon problem for me also is reproducible with Farsi UI and Math, DRAW and WRITER are not affected.

May be there are some problems with different results in WIN and Linux? Or we even have 2 issues?

@Yotam Benshalom:
What's your result when you switch to English UI?
Is this a new problem or did you already observe it with former versions?

Some additional hint: there is no way to open a document "normal". You can do it from Start center, from Stat Center File dialog, from Document File dialog, from WIN Explorer, from Desktop context menu, ... . We have enough reports where these details are determinant, and ratings what might be the "normal way" are not very  uniform.
Comment 9 Rainer Bielefeld Retired 2012-01-11 04:54:31 UTC
I also see the interchanged arrows in the datasources pane <f4>, also in WRITER.
Also Database Table view is affected.

András:
I believe it's not really the core of your area, but may be you can help?
Comment 10 Lior Kaplan 2012-01-11 05:22:47 UTC
It does seems like Linux and Windows have different behavior.

1. Linux - no scroll slider, the arrow looks OK, but don't function correctly (RTL UI with RTL sheet or LTR sheet).
2. Windows - scroll slider exit, but arrow are opposite (although this function correctly).

Both of these issue seems to be more general then only Calc (also see bug 44582), but their appearance in Calc is the critical problem.
Comment 11 Caolán McNamara 2012-01-11 08:39:06 UTC
was there ever a time when this did work, is it a regression against any known version ?
Comment 12 Andras Timar 2012-01-11 08:42:42 UTC
(In reply to comment #9)
> András:
> I believe it's not really the core of your area, but may be you can help?

Sorry, it is beyond my competence.
Comment 13 Lior Kaplan 2012-01-11 09:07:40 UTC
@Caolán
Yes, everything works fine on 3.4.4 (Debian unstable build).
Comment 14 Yotam Benshalom 2012-01-12 06:07:26 UTC
A report in Hebrew forums (http://www.whatsup.co.il/index.php?name=PNphpBB2&file=viewtopic&t=58138) notes that the missing slider issue is caused by the package libreoffice-gnome, which is linux-specific. When it is removed the slider re-appears.
Comment 15 Lior Kaplan 2012-01-12 06:18:10 UTC
Nice catch... confirmed on Ubuntu with 3.5.0 beta2. Removing the package does brings back the scroll slider.
Comment 16 Michael Meeks 2012-09-27 10:27:58 UTC
Interesting; I guess it's some theming problem around RTL - a good place to dig would be:

vcl/unx/gtk/gdi/salnativewidgets-gtk.cxx

And to fiddle with the pieces of the scroll-bar that we handle / render there (I suppose ). Then again there is some oddness here:

sc/source/ui/view/tabview5.cxx:

    pTabControl = new ScTabControl( pFrameWin, &aViewData );
    /*  #i97900# The tab control has to remain in RTL mode if GUI is RTL, this
        is needed to draw the 3D effect correctly. The base TabBar implementes
        mirroring independent from the GUI direction. Have to set RTL mode
        explicitly because the parent frame window is already RTL disabled. */
    pTabControl->EnableRTL( Application::GetSettings().GetLayoutRTL() );

that might be interesting.

HTH.
Comment 17 Not Assigned 2012-10-19 12:58:53 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bfa21ce5fa08f2c634ccb6162914be55aef9f3c2

fdo#44657 Remove hack that "simulates" a mirrored horizontal scrollbar.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 18 Not Assigned 2012-10-25 16:16:51 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b1f308d96609bf6a6bd6b563dcbec246a6910b0f&g=libreoffice-3-6

fdo#44657 Remove hack that "simulates" a mirrored horizontal scrollbar.


It will be available in LibreOffice 3.6.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 19 Lior Kaplan 2012-10-25 16:21:00 UTC
Fix by Jan Holesovsky in master (thanks!), verified in a private build I did. I also cherry-picked this fix for 3.6 branch.