fdo#44657 Remove hack that "simulates" a mirrored horizontal scrollbar.

We are able to paint mirrored scrolbars with the 'gen' plugin, so just fix the
rendering of the scroolbar with the Gtk+ plugin.

Change-Id: I5dbd13420c6290e165ed2f5827769979298abf37